﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
+ v5.2.0:
~~~~~~~~~

+ KGySoft.Drawing namespace:
============================
+ BitmapExtensions class:
  + New Resize overload that does not use Graphics.DrawImage internally.
+ MetafileExtensions class:
  + New ToBitmap overload with keepAspectRatio parameter
+ New ScalingMode enum for BitmapExtensions.Resize

+ KGySoft.Drawing.Imaging namespace:
====================================
+ Color32 struct: new ToOpaque method

~~~~~~~~~
! v5.1.0:
~~~~~~~~~

* Assembly changes:
===================
* Referencing KGySoft.CoreLibraries 5.1.1

! KGySoft.Drawing namespace:
============================
! BitmapExtensions class
  ! The GetColorCount method does not transform pixels of wide color formats to 32-bit colors anymore so it may
    return a different result (an accurate one) for Bitmaps with 16-bit grayscale, 48-bit and 64-bit PixelFormats.
  - Clear method: fixing direct clearing (when no ditherer is used) for bitmaps with negative stride.
! Icons class:
  ! Combine methods:
    ! Icons larger than 64x64 were saved as compressed by default. Now compressing icons with size at least 256x256
      for better compatibility with some applications/platforms.
    ! Icon images with lower than 32 bits-per-pixel are not compressed anymore. Even Windows has problems with 24
      BPP compressed icons and transparency mask for lower BPPs can be generated only for uncompressed images.
    + Adding new overloads with IEnumerable<Icon> and IEnumerable<Bitmap> parameters.
! IconExtensions class:
  ! SaveHighQuality method has been renamed to SaveAsIcon to match with its ImageExtensions counterpart.
  ! ToMultiResBitmap methods: They don't return compressed results on any platforms anymore because PNG compressed