@@ -13,6 +13,8 @@
 ============================
 + BitmapExtensions class:
   + New Resize overload that does not use Graphics.DrawImage internally.
+* ImageExtensions class:
+  - DrawInto methods: Using alpha blending even if a ditherer is used for the drawing.
 + MetafileExtensions class:
   + New ToBitmap overload with keepAspectRatio parameter
 + New ScalingMode enum for BitmapExtensions.Resize
